trying to do sth

--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>tic tac toe</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-  <button id='playbutton' class='button' onclick='start_to_play().catch(console.error)'>Play</button>
-  <script src="script.js">
+  <script src="script.js" onload="onload_starting()">
     <noscript>Sorry, your browser does not support JavaScript!</noscript>
   </script>
+
 </body>
 <!--- комментарий делается так --->
 
