--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>tic tac toe</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css">
+  <link rel="apple-touch-icon" sizes="180x180" href=> <!--- ссылки пока нету   --->
+  <link rel="icon" type="image/png" sizes="32x32" href=>
+  <link rel="icon" type="image/png" sizes="16x16" href=>
 </head>
 
 <body>
-
-  <script src="script.js" onload="onload_starting()">
-    <noscript>Sorry, your browser does not support JavaScript!</noscript>
-  </script>
-
+  <script src="script.js"></script>
+  <noscript>Sorry, your browser does not support JavaScript!</noscript>
 </body>
-<!--- комментарий делается так --->
-
 </html>
